[gd_scene load_steps=16 format=3 uid="uid://b52fcjo0qajoc"]

[ext_resource type="Script" uid="uid://2dajnsjsat2u" path="res://scripts/bee/bee.gd" id="1_1q2x0"]
[ext_resource type="Texture2D" uid="uid://bkjdwddut52wn" path="res://assets/bee/bee-default.png" id="2_ogg2i"]
[ext_resource type="Script" uid="uid://dgrdo0g8t0rmd" path="res://scripts/bee/movement-component.gd" id="2_vie5o"]
[ext_resource type="Texture2D" uid="uid://c850efmm1y4o2" path="res://assets/bee/bee-left.png" id="3_qf6nb"]
[ext_resource type="Texture2D" uid="uid://oip5n2ggyxai" path="res://assets/bee/bee-down-default.png" id="3_yiyqc"]
[ext_resource type="Texture2D" uid="uid://b5c70xf3jbgt" path="res://assets/bee/bee-right.png" id="4_oynbf"]
[ext_resource type="Texture2D" uid="uid://d1k5dd48xxx5o" path="res://assets/bee/bee-down-left.png" id="4_ykkpv"]
[ext_resource type="Texture2D" uid="uid://b6lch5wwkraq7" path="res://assets/bee/bee-down-right.png" id="5_011rt"]
[ext_resource type="Script" uid="uid://r85cri203cjn" path="res://scripts/bee/animation-component.gd" id="6_nkr4b"]
[ext_resource type="Texture2D" uid="uid://cyvdd0xeublfd" path="res://assets/bee/hitbox-dot.png" id="8_ykkpv"]
[ext_resource type="Script" uid="uid://dj50mkbj06f6q" path="res://scripts/bee/shoot-component.gd" id="11_011rt"]
[ext_resource type="PackedScene" uid="uid://buts3pip8f7ji" path="res://scenes/bee-bullet.tscn" id="12_ovfpg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qf6nb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ogg2i")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yiyqc")
}],
"loop": true,
"name": &"down-default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ykkpv")
}],
"loop": true,
"name": &"down-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_011rt")
}],
"loop": true,
"name": &"down-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qf6nb")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_oynbf")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oynbf"]
radius = 11.0
height = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xfac4"]
radius = 1.0

[node name="bee" type="CharacterBody2D" node_paths=PackedStringArray("movement_component", "animation_component", "shoot_component", "disappear_timer", "invincibility_timer", "hitbox_dot")]
scale = Vector2(1.4, 1.4)
script = ExtResource("1_1q2x0")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
shoot_component = NodePath("ShootComponent")
disappear_timer = NodePath("disappear-timer")
invincibility_timer = NodePath("invincibility-timer")
disappear_time = 1.0
invincible_time = 2.0
hitbox_dot = NodePath("hitbox-sprite")

[node name="bee-sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(0.78431374, 1, 1, 1)
position = Vector2(-1.7763568e-15, -12.857142)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_qf6nb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_oynbf")

[node name="hitbox-sprite" type="Sprite2D" parent="."]
position = Vector2(0, 2.861023e-06)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_ykkpv")

[node name="hitbox" type="Area2D" parent="." groups=["player-hitbox"]]
modulate = Color(0, 1, 1, 1)
position = Vector2(0, 11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -10.999999)
shape = SubResource("CircleShape2D_xfac4")
debug_color = Color(0.98145753, 0, 0.3749718, 0.41960785)

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("2_vie5o")
speed = 350.0
focus_speed = 130.0
metadata/_custom_type_script = "uid://dgrdo0g8t0rmd"

[node name="AnimationComponent" type="Node" parent="." node_paths=PackedStringArray("animation")]
script = ExtResource("6_nkr4b")
animation = NodePath("../bee-sprite")
metadata/_custom_type_script = "uid://r85cri203cjn"

[node name="ShootComponent" type="Node" parent="." node_paths=PackedStringArray("shoot_cd_timer")]
script = ExtResource("11_011rt")
bullet_scene = ExtResource("12_ovfpg")
shoot_cd_timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="ShootComponent"]
wait_time = 0.1

[node name="invincibility-timer" type="Timer" parent="."]
one_shot = true

[node name="disappear-timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShootComponent/Timer" to="ShootComponent" method="_on_timer_timeout"]
[connection signal="timeout" from="invincibility-timer" to="." method="_on_invincibilitytimer_timeout"]
[connection signal="timeout" from="disappear-timer" to="." method="_on_disappeartimer_timeout"]
